force-app/main/default/objects/MigrationObjectDependency__c/MigrationObjectDependency__c.object-meta.xml
<CustomObject>
    <description>Directed edge in the object dependency graph. One record per parent-child relationship between migrated objects. Populated by the relationship resolver at job configuration time.</description>
    <label>Migration Object Dependency</label>
    <nameField>
        <label>Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Object Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>