force-app/main/default/objects/MigrationObjectDependency__c/fields/ChildObjectConfig__c.field-meta.xml
<CustomField>
    <fullName>ChildObjectConfig__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The object config that holds the foreign key field and loads after the parent.</description>
    <label>Child Object Config</label>
    <referenceTo>MigrationObjectConfig__c</referenceTo>
    <relationshipLabel>Child Dependencies</relationshipLabel>
    <relationshipName>ChildDependencies</relationshipName>
    <type>Lookup</type>
</CustomField>