force-app/main/default/objects/MigrationObjectDependency__c/fields/DependencyType__c.field-meta.xml
<CustomField>
    <fullName>DependencyType__c</fullName>
    <label>Dependency Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MasterDetail</fullName>
                <label>Master-Detail</label>
            </value>
            <value>
                <fullName>Lookup</fullName>
                <default>true</default>
                <label>Lookup</label>
            </value>
            <value>
                <fullName>SelfReference</fullName>
                <label>Self Reference</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>