force-app/main/default/objects/MigrationObjectDependency__c/fields/IsAutoDetected__c.field-meta.xml
<CustomField>
    <fullName>IsAutoDetected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this dependency was derived from a Salesforce DescribeSObject call. False when manually configured or seeded from MigrationObjectRule__mdt.</description>
    <label>Auto Detected</label>
    <type>Checkbox</type>
</CustomField>