force-app/main/default/objects/MigrationObjectDependency__c/fields/MigrationJob__c.field-meta.xml
<CustomField>
    <fullName>MigrationJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Denormalized reference to the parent job. Enables job-scoped queries on dependencies without traversing two relationship hops.</description>
    <label>Migration Job</label>
    <referenceTo>MigrationJob__c</referenceTo>
    <relationshipLabel>Migration Object Dependencies</relationshipLabel>
    <relationshipName>MigrationObjectDependenciesJob</relationshipName>
    <type>Lookup</type>
</CustomField>