force-app/main/default/objects/MigrationObjectDependency__c/fields/ParentObjectConfig__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectConfig__c</fullName>
    <description>The object config that must be fully loaded before the child. Cascade delete: removing an object config removes its dependency edges.</description>
    <label>Parent Object Config</label>
    <referenceTo>MigrationObjectConfig__c</referenceTo>
    <relationshipLabel>Parent Dependencies</relationshipLabel>
    <relationshipName>ParentDependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>