force-app/main/default/objects/MigrationObjectDependency__c/fields/RelationshipField__c.field-meta.xml
<CustomField>
    <fullName>RelationshipField__c</fullName>
    <description>API name of the lookup or master-detail field on the child object that references the parent (e.g. AccountId on Contact, OpportunityId on OpportunityLineItem).</description>
    <label>Relationship Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>